--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panaderia</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="shortcut icon" href="/img/logo.png">
 </head>
 <body>
-    <nav>
-    </nav>
+    <header id="header"></header>
     <main>
-
+        
     </main>
-    <footer>
+    <footer id="footer">
     </footer>
     <script src="js/app.js"></script>
 </body>
