--- a/index.html
+++ b/index.html
@@ -10,7 +10,23 @@
 <body>
     <header id="header"></header>
     <main>
-        
+        <!-- Slider -->
+        <section class="slider" id="slider">
+            <button class="btn-slider back" id="btn-slider"><img src="./img/arrow.png" alt=""></button>
+            <img src="" id="img-slider">
+            <button class="btn-slider next" id="btn-slider"><img src="./img/arrow.png" alt=""></button>
+        </section>
+        <!-- Oferts -->
+        <section class="ofertas">
+
+        </section>
+        <!--  -->
+        <section>
+
+        </section>
+        <section>
+
+        </section>
     </main>
     <footer id="footer">
     </footer>
