--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <img src="" id="img-slider">
             <button class="btn-slider next" id="btn-slider"><img src="./img/arrow.png" alt=""></button>
         </section>
-        <!-- Oferts -->
-        <section class="ofertas">
-
+        <section class="ofertas" id="secOfert">
+            <h1 class="title">OFERTAS</h1>
+            <div class="titleLine"></div>
         </section>
         <!--  -->
         <section>
