--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     </main>
     <footer id="footer">
     </footer>
+    <!-- Scripts -->
     <script src="js/app.js"></script>
+    <script src="js/product.js"></script>
 </body>
 </html>
