--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <section class="ofertas" id="secOfert">
             <h1 class="title">OFERTAS</h1>
             <div class="titleLine"></div>
+            <div id="ofertContainer">
+                <!-- Productos en Oferta -->
+            </div>
         </section>
         <!--  -->
         <section>
@@ -31,7 +34,8 @@
     <footer id="footer">
     </footer>
     <!-- Scripts -->
-    <script src="js/app.js"></script>
+    <script src="js/main.js"></script>
     <script src="js/product.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
