--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <header id="header"></header>
     <main>
         <!-- Slider -->
-        <section class="slider" id="slider">
+        <section class="slider fade-in" id="slider">
             <button class="btn-slider back" id="btn-slider"><img src="./img/arrow.png" alt=""></button>
             <img src="" id="img-slider">
             <button class="btn-slider next" id="btn-slider"><img src="./img/arrow.png" alt=""></button>
         </section>
-        <section class="ofertas" id="secOfert">
+        <!-- Productos en Oferta -->
+        <section class="ofertas fade-in" id="secOfert">
             <h1 class="title">OFERTAS</h1>
             <div class="titleLine"></div>
             <div id="ofertContainer">
-                <!-- Productos en Oferta -->
             </div>
         </section>
         <!--  -->
