--- a/pages/products.html
+++ b/pages/products.html
@@ -35,7 +35,7 @@
             </section>
             
             <!-- Sección de Productos y Busqueda -->
-            <section id="productSection">
+            <section class="" id="productSection">
                     
             </section>
         </section>
