--- a/pages/products.html
+++ b/pages/products.html
@@ -23,13 +23,9 @@
                 </section>
                 <!-- Filters -->
                  <h1>Filtros</h1>
-                <ul>
-                    <li class="filterOp">
-                        Precio
-                        <input type="range" class="opRange" name="" id="">
-                    </li>
+                <ul id="filterOp">
                     <!-- CATEGORÍAS -->
-                    <li class="filterOp">Categoria</li>
+                    <li class="filterOp">Categoría</li>
                     <ul>
                         <li><input type="checkbox" class="opCheckbox">Panadería</li>
                         <li><input type="checkbox" class="opCheckbox">Repostería</li>
